# price-tracker

./: Dockerfile  README.md  ROADMAP.md  TODO.md  docker-compose.yml  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yaml
doc/: 01-overview.md  02-server-cache.md  03-api-layer.md  04-client-services.md  05-ui-components.md  06-dashboard.md
src/: app.html  hooks.server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/components/: AssetCard.svelte  PriceChart.svelte
src/lib/config/: assets.ts
src/lib/server/: priceCache.ts
src/lib/services/: priceService.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/api/price/: +server.ts
