[package]
name = "price-tracker"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
